--- a/futsal.html
+++ b/futsal.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <title>Ekstrakulikuler Futsal</title>
-    <style type="text/css" media="all">
- 
-    </style>
+    
+ 			<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 </head>
 
 <body>
