--- a/search_tree.html
+++ b/search_tree.html
@@ -63,6 +63,7 @@
 			letter-spacing: 1px;
 			margin: 0 4px 0 0;
 			transition: .7s;
+                        color: white;
 		}
 		.cari img{
 			width: 40px;
