--- a/search_tree.html
+++ b/search_tree.html
@@ -107,7 +107,7 @@
 				<option value="https://www.google.com/search">Google</option>
 				<option value="https://www.youtube.com/results">Youtube</option>
 				<option value="https://www.tiktok.com/search">Tiktok</option>
-				<option value="https://github.com/search">Gihub</option>
+				<option value="https://github.com/search">Github</option>
 			</select>
 			<button type="submit">
 				<img src="cari.png" alt="">
