--- a/search_tree.html
+++ b/search_tree.html
@@ -106,7 +106,7 @@
 			<select name="" id="tujuan">
 				<option value="-">tujuan -</option>
 				<option value="https://www.google.com/search">Google</option>
-				<option value="https://www.youtube.com/results">Youtube</option>
+				<option value="https://m.youtube.com/results">Youtube</option>
 				<option value="https://www.tiktok.com/search">Tiktok</option>
 				<option value="https://github.com/search">Github</option>
 				<option value="https://stackoverflow.com/search">Stackoverflow</option>
