--- a/search_tree.html
+++ b/search_tree.html
@@ -130,7 +130,7 @@
                 let i = 0
 	!function gantiBg(){
 		const daftar_bg = ['bg1.jpg', 'bg2.jpg', 'bg3.jpg', 'bg4.jpg', 'bg5.jpg']
-		const daftar_bg_laskap = ['bg_l1.jpg', 'bg_l2.jpg', 'bg_l3.jpg', 'bg_l4.jpg', 'bg_l5.jpg', 'bg_l6.jpg', 'bg_l7.jpg']
+		const daftar_bg_laskap = ['bg_l1.jpg', 'bg_l2.jpg', 'bg_l3.jpg', 'bg_l4.jpg', 'bg_l5.jpg']
 		
 			if(window.screen.width < 600){
 				bg.style.backgroundImage = `url('${daftar_bg[3]}')`
@@ -151,7 +151,7 @@
 			if(i > daftar_bg_laskap.length -1){
 				i = 0
 			}
-		}, 10000)	
+		}, 15000)	
 		}
 		
 	}()
