--- a/search_tree.html
+++ b/search_tree.html
@@ -32,9 +32,11 @@
 			border-radius: 10px;
 			justify-content: center;
 			align-items: center;
-			position: relative;
+			position: absolute ;
 			flex-wrap: wrap;
-		}
+		        top: 20%;
+
+}
 		.cari{
 			background: #2C3333;
 			width: calc(100% - 5px);
